--- a/.gitignore
+++ b/.gitignore
@@ -24,12 +24,7 @@
 
 # Shared objects (inc. Windows DLLs)
 *.dll
-*.so
-*.so.*
 *.dylib
-
-#Certificates
-*.crt
 
 # Executables
 *.exe
@@ -56,3 +51,4 @@ dkms.conf
 
 # Project data
 *.db
+CLManager
